project/force-app/main/default/objects/Account/fields/Account_Bank_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Bank_Number__c</fullName>
    <description>Bank Account Number</description>
    <label>Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>