project/force-app/main/default/objects/Account/fields/Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder__c</fullName>
    <description>Bank Account Owner Name</description>
    <label>Account Holder</label>
    <length>60</length>
    <type>Text</type>
</CustomField>