project/force-app/main/default/objects/Account/fields/Account_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Short_Name__c</fullName>
    <label>Short Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>