project/force-app/main/default/objects/Account/fields/Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Code__c</fullName>
    <formula>Bankey_Name__r.Bank_Key_Code__c</formula>
    <label>Bank Code</label>
    <type>Text</type>
</CustomField>