project/force-app/main/default/objects/Account/fields/Bank_Country__c.field-meta.xml
<CustomField>
    <fullName>Bank_Country__c</fullName>
    <formula>TEXT(Bankey_Name__r.Country_Code__c)</formula>
    <label>Bank Country Code</label>
    <type>Text</type>
</CustomField>