project/force-app/main/default/objects/Account/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <formula>Bankey_Name__r.Name</formula>
    <label>Bank Name of Account</label>
    <type>Text</type>
</CustomField>