project/force-app/main/default/objects/Account/fields/Bankey_Name__c.field-meta.xml
<CustomField>
    <fullName>Bankey_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bank Code Name - Lookup to Bankey__c custom object</description>
    <label>Bank Key Name</label>
    <referenceTo>Bankey__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>