project/force-app/main/default/objects/Account/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>Tenant Code - Read Only for Business Tenant</description>
    <label>Tenant Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>