project/force-app/main/default/objects/Account/fields/Country_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_1__c</fullName>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>