project/force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Tenant Type</description>
    <label>Tenant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Bên Ngoài</fullName>
                <isActive>false</isActive>
                <label>Bên Ngoài</label>
            </value>
            <value>
                <fullName>Nội Bộ</fullName>
                <isActive>false</isActive>
                <label>Nội Bộ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>