project/force-app/main/default/objects/Account/fields/District_1__c.field-meta.xml
<CustomField>
    <fullName>District_1__c</fullName>
    <label>District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>