project/force-app/main/default/objects/Account/fields/Enterprise_Code_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Code_Certificate__c</fullName>
    <description>Enterprise Code/Investment Certificate/Business Registration - Required when Opportunity = Deposit for Business</description>
    <label>Enterprise Code/Certificate</label>
    <length>40</length>
    <type>Text</type>
</CustomField>