project/force-app/main/default/objects/Account/fields/ID_Number_Passport__c.field-meta.xml
<CustomField>
    <fullName>ID_Number_Passport__c</fullName>
    <description>ID/Passport - Required when Opportunity = Deposit for Individual</description>
    <label>ID/Passport Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>