project/force-app/main/default/objects/Account/fields/Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Issued_Date__c</fullName>
    <description>Issue Date</description>
    <label>Issued Date</label>
    <type>Date</type>
</CustomField>