project/force-app/main/default/objects/Account/fields/Issued_Place__c.field-meta.xml
<CustomField>
    <fullName>Issued_Place__c</fullName>
    <description>Place of Issue</description>
    <label>Issued Place</label>
    <length>250</length>
    <type>Text</type>
</CustomField>