project/force-app/main/default/objects/Account/fields/Number_Of_RO_In_Shop_House__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_RO_In_Shop_House__c</fullName>
    <label>Number of Shophouses</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>