project/force-app/main/default/objects/Account/fields/Number_Of_RO_In_Vietnam__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_RO_In_Vietnam__c</fullName>
    <description>Number of Stores in Vietnam</description>
    <label>Number of Stores in Vietnam</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>