project/force-app/main/default/objects/Account/fields/Number_Of_RO_In_Vincom__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_RO_In_Vincom__c</fullName>
    <label>No. of Stores in Vincom</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>