project/force-app/main/default/objects/Account/fields/Number_Of_RO_Worldwide__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_RO_Worldwide__c</fullName>
    <description>Number of Stores Worldwide</description>
    <label>Number of Stores Worldwide</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>