project/force-app/main/default/objects/Account/fields/SAP_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_ID__c</fullName>
    <description>SAP Integration Code - Read Only</description>
    <externalId>true</externalId>
    <label>SAP Integration ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>