project/force-app/main/default/objects/Account/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <description>Tax Code - Required when Opportunity = Closing</description>
    <label>Tax Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>