project/force-app/main/default/objects/Account/fields/Total_Area_Renting_At_Vincom__c.field-meta.xml
<CustomField>
    <fullName>Total_Area_Renting_At_Vincom__c</fullName>
    <label>Total Rented Area in Vincom (m2)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>