project/force-app/main/default/objects/Account/fields/Total_Brands__c.field-meta.xml
<CustomField>
    <fullName>Total_Brands__c</fullName>
    <label>Total Brands</label>
    <summaryForeignKey>Account_Brand_Relationship__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>