project/force-app/main/default/objects/Account/fields/Trading_Partner__c.field-meta.xml
<CustomField>
    <fullName>Trading_Partner__c</fullName>
    <description>Đối Tác Thương Mại - Required when Type = Nội Bộ for Business</description>
    <label>Trading Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tập đoàn Vingroup</fullName>
            </value>
            <value>
                <fullName>CT Đô thị Nam Hà Nội</fullName>
            </value>
            <value>
                <fullName>CT Đô thị Sài Đồng</fullName>
            </value>
            <value>
                <fullName>CT Địa ốc TP Hoàng Gia</fullName>
            </value>
            <value>
                <fullName>CT BĐS Xavinco</fullName>
            </value>
            <value>
                <fullName>CT BĐS Thăng Long</fullName>
            </value>
            <value>
                <fullName>CT BĐS Tây Tăng Long</fullName>
            </value>
            <value>
                <fullName>Công ty TNHH Xalivico</fullName>
            </value>
            <value>
                <fullName>CT Metropolis Hà Nội</fullName>
            </value>
            <value>
                <fullName>CT đô thị du lịch Cần Giờ</fullName>
            </value>
            <value>
                <fullName>CTCP sách Việt Nam</fullName>
            </value>
            <value>
                <fullName>CT TVĐT và ĐT VN</fullName>
            </value>
            <value>
                <fullName>CT In sách VN</fullName>
            </value>
            <value>
                <fullName>CT Công viên trung tâm</fullName>
            </value>
            <value>
                <fullName>CT BĐS Phú Gia</fullName>
            </value>
            <value>
                <fullName>CT Đô Thị Gia Lâm</fullName>
            </value>
            <value>
                <fullName>Berjaya VN INT University Town</fullName>
            </value>
            <value>
                <fullName>TNHH Nam Hà Nội</fullName>
            </value>
            <value>
                <fullName>CT TTTC Berjaya VN</fullName>
            </value>
            <value>
                <fullName>CT Thái Sơn</fullName>
            </value>
            <value>
                <fullName>CT Delta</fullName>
            </value>
            <value>
                <fullName>Cty CP Phát triển GS Củ Chi</fullName>
            </value>
            <value>
                <fullName>CT P&amp;S</fullName>
            </value>
            <value>
                <fullName>CT CP KD&amp; PT Sinh Thái</fullName>
            </value>
            <value>
                <fullName>Cty CP Đầu tư xây dựng Đại An</fullName>
            </value>
            <value>
                <fullName>Cty CP KD BĐS S-Vin Việt Nam</fullName>
            </value>
            <value>
                <fullName>Cty CP KD TM SADO</fullName>
            </value>
            <value>
                <fullName>Cty CP ĐTPT BĐS Trường Thịnh</fullName>
            </value>
            <value>
                <fullName>CT TM ĐT&amp;PT Thời Đại</fullName>
            </value>
            <value>
                <fullName>Công ty Thiên Niên Kỷ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>