project/force-app/main/default/objects/Account/fields/Vincom_Usual_Rental_Area__c.field-meta.xml
<CustomField>
    <fullName>Vincom_Usual_Rental_Area__c</fullName>
    <label>Usual Rental Area in Vincom (m2)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>