project/force-app/main/default/objects/Account/fields/Ward_1__c.field-meta.xml
<CustomField>
    <fullName>Ward_1__c</fullName>
    <label>Ward</label>
    <length>255</length>
    <type>Text</type>
</CustomField>