project/force-app/main/default/objects/Account/recordTypes/Business_Tenant.recordType-meta.xml
<RecordType>
    <fullName>Business_Tenant</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>Business / Internal / Legal Entity Tenant</description>
    <label>Business Tenant</label>
</RecordType>