project/force-app/main/default/objects/Account/recordTypes/Individual_Tenant.recordType-meta.xml
<RecordType>
    <fullName>Individual_Tenant</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>Individual Tenant</description>
    <label>Individual Tenant</label>
</RecordType>