project/force-app/main/default/objects/Account/validationRules/Format_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Format_Phone</fullName>
    <active>true</active>
    <description>Phone number must start with 0, not 00, and have 10-11 digits.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Phone)),
  NOT(REGEX(Phone, &quot;^0[1-9][0-9]{8,9}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Invalid phone number. Must start with 0 (not 00) and have 10-11 digits.</errorMessage>
</ValidationRule>