project/force-app/main/default/objects/Account/validationRules/Require_Brand.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Brand</fullName>
    <active>true</active>
    <description>Brand is required, except for Ad Leasing role.</description>
    <errorConditionFormula>AND(
  ISBLANK(Brand__c),
  $UserRole.Name &lt;&gt; &apos;Ad Leasing&apos;
)</errorConditionFormula>
    <errorDisplayField>Brand__c</errorDisplayField>
    <errorMessage>Please select a Brand. (Required except for Ad Leasing department)</errorMessage>
</ValidationRule>