project/force-app/main/default/objects/Account/validationRules/Require_EnterpriseCode_For_Business.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_EnterpriseCode_For_Business</fullName>
    <active>true</active>
    <description>Business Tenants must have an Enterprise Code Certificate.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Business_Tenant&apos;,
    ISBLANK(Enterprise_Code_Certificate__c)
)</errorConditionFormula>
    <errorDisplayField>Enterprise_Code_Certificate__c</errorDisplayField>
    <errorMessage>Enterprise Code Certificate is required for Business Tenants.</errorMessage>
</ValidationRule>