project/force-app/main/default/objects/Account/validationRules/Require_TaxCode_For_Business.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_TaxCode_For_Business</fullName>
    <active>true</active>
    <description>Business Tenants must have a Tax Code.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Business_Tenant&apos;,
    ISBLANK(Tax_Code__c)
)</errorConditionFormula>
    <errorDisplayField>Tax_Code__c</errorDisplayField>
    <errorMessage>Tax Code is required for Business Tenants.</errorMessage>
</ValidationRule>