project/force-app/main/default/objects/Account/validationRules/Require_Trading_Partner.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Trading_Partner</fullName>
    <active>true</active>
    <description>Trading Partner is required when Tenant Type is Internal for Business Tenants.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Customer_Type__c, &apos;Internal&apos;),
  ISBLANK(TEXT(Trading_Partner__c)),
  RecordType.DeveloperName = &apos;Business_Tenant&apos;
)</errorConditionFormula>
    <errorDisplayField>Trading_Partner__c</errorDisplayField>
    <errorMessage>Please select Trading Partner when Customer is Internal.</errorMessage>
</ValidationRule>