project/force-app/main/default/objects/Account/listViews/All_Business_Tenants.listView-meta.xml
<ListView>
    <fullName>All_Business_Tenants</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Company_Code__c</columns>
    <columns>Email__c</columns>
    <columns>Tax_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business_Tenant</value>
    </filters>
    <label>All Business Tenants</label>
</ListView>