project/force-app/main/default/objects/Account/listViews/All_Individual_Tenants.listView-meta.xml
<ListView>
    <fullName>All_Individual_Tenants</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Email__c</columns>
    <columns>ID_Number_Passport__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Individual_Tenant</value>
    </filters>
    <label>All Individual Tenants</label>
</ListView>