project/force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>