project/force-app/main/default/objects/Account/listViews/PlatinumandGoldSLACustomers.listView-meta.xml
<ListView>
    <fullName>PlatinumandGoldSLACustomers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Platinum and Gold SLA Customers</label>
</ListView>